fixed fonts, img

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta name="theme-color" content="#3c5ae4">
 </head>
 
-<body >
+<body>
   <div class="wrapper">
     <header class="header">
       
@@ -58,7 +58,7 @@
               </g>
           </svg>
           </a>
-          <span class="slogan">Together, Everything Is Possible</span>
+          <span class="slogan">Together, Everything <br />  Is Possible</span>
         </div>
 
         <nav class="wrap-nav">
