--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -94,7 +94,17 @@
 
       <div class="widget inner-text-blc">
         <div class="container">
- 
+
+          <h3>Information Sharing:</h3>
+          <p>Specific offers, competitions or services</p>
+          <p>We may share your information with a specific organisation where you have opted to participate in an offer, competition or service relating to them. They may contact you by email, post, phone or SMS.</p>
+          <p>Examples of these organisations include, but are not limited to:</p>
+          <ul>
+            <li>*Sky UK Limited Registered office at Grant Way, Isleworth, Middlesex TW7 5QD</li>
+            <li>*Go Groopie Limited - Alpha House, 100 Borough High Street, London SE1 1LB</li>
+            <li>*Discount Experts, Alpha House, 100 Borough High Street, London</li>
+          </ul>
+
             <h3>General Information:</h3>
 
             <p>This Privacy Policy has been written to reassure you that the personal information you provide to us is dealt with safely and securely. Further information is given below. If you have any questions please contact us at <a href="mainlo:hello@tributemedia.co.uk">hello@tributemedia.co.uk</a>.</p>
