--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <p>We call out system, My-IQ, it’s more than just a lead management platform. It’s intelligent, enriching each record with the latest and most update information in real time. MY-IQ processed literally millions of compliant, fully validated records every single month! Whilst maintaining well over 99% uptime and optimum speeds.</p>
 
             <div class="mobile-center">
-              <a href="scroll-form" class="button js-scroll">Get In Touch</a>
+              <a href="scroll-form" class="button js-scroll btn-center">Get In Touch</a>
             </div>
           </div>
           <div class="img">
